--- a/inscripcion-a-seminario.html
+++ b/inscripcion-a-seminario.html
@@ -58,8 +58,8 @@
                 <div class="col-md-11 col-lg-10 col-xl-9 mx-auto py-5">
                     <div class="btn-group mt-4 w-100" role="group">
                         <a class="btn btn-outline-dark btn-sm" href="inscripcion-a-mano.html"><span id="cuantosTodos"></span> Tutores(as) en total</a>
-                        <a class="btn btn-outline-dark btn-sm active" href="inscripcion-a-seminario.html"><span id="cuantosSeminario"></span> con cupos para Seminario <span class="d-none d-lg-inline">de Licenciatura I</span></a>
-                        <a class="btn btn-outline-dark btn-sm" href="inscripcion-a-titulo.html"><span id="cuantosTitulo"></span> con cupos para <span class="d-none d-lg-inline">Proyecto de</span> Título <span class="d-none d-lg-inline">I</span>
+                        <a class="btn btn-outline-dark btn-sm active" href="inscripcion-a-seminario.html"><span id="cuantosSeminario"></span> con cupos para Seminario <span class="d-none d-lg-inline">de Licenciatura</span></a>
+                        <a class="btn btn-outline-dark btn-sm" href="inscripcion-a-titulo.html"><span id="cuantosTitulo"></span> con cupos para <span class="d-none d-lg-inline">Proyecto de</span> Título
                         </a>
                     </div>
                 </div>
