--- a/guias.html
+++ b/guias.html
@@ -51,7 +51,7 @@
 
                     <p>Esta dirección puede ser directa o indirecta. Cuando la responsabilidad de la tutela es directa, cada tutor(a) cumple el rol de <em>Prof. Guía</em>.</p>
 
-                    <p>Cumpliendo con jerarquía y adscripción reglamentadas, cada Prof. Guía también puede cumplir el rol de <em>Prof. Guía 1</em>, haciendo una tutela indirecta que es mediada por un(a) <em>Prof. Guía 2</em>.</p>
+                    <p>Cumpliendo con jerarquía y adscripción reglamentadas, cada Prof. Guía también puede cumplir el rol de <em>Prof. Guía 1</em>, haciendo una tutela indirecta gracias a un(a) <em>Prof. Guía 2</em>.</p>
 
                     <p>En primer semestre de 2024, los(as) siguientes cumplen el rol de <select id="roles" class="form-select form-select-sm" style="display:inline-block; width:14rem; border:none; font-size:.95rem; background-color:#fff;">
                             <option value="1">Prof. Guía o Prof. Guía 1</option>
