--- a/guias.html
+++ b/guias.html
@@ -53,7 +53,7 @@
 
                     <p>Cumpliendo con jerarquía y adscripción reglamentadas, cada Prof. Guía también puede cumplir el rol de <em>Prof. Guía 1</em>, haciendo una tutela indirecta gracias a un(a) <em>Prof. Guía 2</em>.</p>
 
-                    <p>En primer semestre de 2024, los(as) siguientes cumplen el rol de <select id="roles" class="form-select form-select-sm" style="display:inline-block; width:14rem; border:none; font-size:.95rem; background-color:#fff;">
+                    <p>En primer semestre del año 2024, son <span class="guia-1">29</span><span class="guia-2 d-none">15</span> quienes cumplen el rol de <select id="roles" class="form-select form-select-sm" style="display:inline-block; width:14rem; border:none; font-size:.95rem; background-color:#fff;">
                             <option value="1">Prof. Guía o Prof. Guía 1</option>
                             <option value="2">Prof. Guía 2</option>
                         </select></p>
@@ -79,12 +79,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"
-            integrity="sha512-dfX5uYVXzyU8+KHqj8bjo7UkOdg18PaOtpa48djpNbZHwExddghZ+ZmzWT06R5v6NSk3ZUfsH6FNEDepLx9hPQ=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js" integrity="sha512-dfX5uYVXzyU8+KHqj8bjo7UkOdg18PaOtpa48djpNbZHwExddghZ+ZmzWT06R5v6NSk3ZUfsH6FNEDepLx9hPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
         <script>
             document.addEventListener("scroll", (event) => {
